# sec_nlp

./: .env.template  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Makefile  README.md  main.py  option_b_switch.sh  option_b_switch_fast.sh  pyproject.toml  pytest.ini  requirements.txt  restructure_repo.sh
.github/: copilot-instructions.md
.github/workflows/: autosquash.yml  ci.yml  pylint.yml
chains/: __init__.py  sec.py
crates/edga_rs/: Cargo.toml
crates/edga_rs/examples/: company_facts.rs  fetch_10k.rs
crates/edga_rs/src/: errors.rs  lib.rs
crates/edga_rs/src/cache/: disk.rs  mod.rs
crates/edga_rs/src/client/: mod.rs  rate_limit.rs  validation.rs
crates/edga_rs/src/corp/: cik.rs  facts.rs  mod.rs  submissions.rs
crates/edga_rs/src/filings/: mod.rs
crates/edga_rs/src/parse/: infer.rs  mod.rs  traits.rs
crates/edga_rs/src/utils/: mod.rs
crates/edga_rs/tests/integration/: client_tests.rs
crates/edgars/: Cargo.toml  README.md
crates/edgars/bench/: benchmarks.rs
crates/edgars/examples/: company_facts.rs
crates/edgars/src/: errors.rs  lib.rs  python.rs
crates/edgars/src/client/: mod.rs  rate_limit.rs  retry.rs  validation.rs
crates/edgars/src/corp/: cik.rs  facts.rs  mod.rs  submissions.rs
crates/edgars/src/filings/: metadata.rs  mod.rs
crates/edgars/src/parse/: infer.rs  mod.rs
crates/edgars/src/utils/: mod.rs  urls.rs
crates/edgars/tests/: main_tests.rs  mod.rs
crates/sec_o3/: Cargo.toml  README.md  sec_o3.pyi
crates/sec_o3/bench/: benchmarks.rs
crates/sec_o3/src/: errors.rs  filings.rs  lib.rs  python.rs  utils.rs
crates/sec_o3/src/client/: mod.rs  rate_limit.rs  retry.rs  validation.rs
crates/sec_o3/src/corp/: facts.rs  mod.rs  submissions.rs
crates/sec_o3/src/download/: client.rs  filings.rs  mod.rs  rate_limit.rs  retry.rs  validation.rs
crates/sec_o3/src/filings/: metadata.rs  mod.rs
crates/sec_o3/src/parse/: document.rs  html.rs  json.rs  mod.rs
crates/sec_o3/src/utils/: cik.rs  form_type.rs  mod.rs  urls.rs
crates/sec_o3/tests/: main_tests.rs
crates/tests/: main_tests.rs
prompts/: sample_prompt.yml
python/sec_nlp/: __init__.py  types.py
python/sec_nlp/chains/: __init__.py  sec_runnable.py
python/sec_nlp/llms/: __init__.py  local_llm_base.py  local_t5_wrapper.py
python/sec_nlp/pipelines/: __init__.py  pipeline.py
python/sec_nlp/prompts/: sample_prompt_1.yml
python/sec_nlp/tests/: conftest.py  test_cli.py  test_pipeline_core.py
python/sec_nlp/tests/rust/: test_edgars.py
python/sec_nlp/utils/: downloader.py  preprocessor.py
sec_nlp/: __init__.py
sec_nlp/api/: __init__.py
sec_nlp/chains/: __init__.py
sec_nlp/cli/: __init__.py  __main__.py  main.py
sec_nlp/cli/commands/: __init__.py
sec_nlp/cli/utils/: __init__.py
sec_nlp/core/: __init__.py  downloader.py  pipeline.py  preprocessor.py
sec_nlp/core/config/: __init__.py  logging.py  settings.py
sec_nlp/core/llm/: __init__.py  base.py  base.pyi  chains.py  hf.py  local_t5.py  ollama.py
sec_nlp/core/vectors/: __init__.py
sec_nlp/llm/: __init__.py  base.py  base.pyi  chains.py  local_t5.py  ollama.py
sec_nlp/llms/: local_llm_base.py
sec_nlp/pipelines/: __init__.py  pipeline.py
sec_nlp/pipelines/utils/: __init__.py  preprocessor.py
sec_nlp/tests/: conftest.py  test_chains_and_validation.py  test_cli.py  test_downloader.py  test_enums.py  test_llm_chains.py  test_llms_local_passthrough.py  test_pipeline_core.py  test_preprocessor.py  test_types.py
sec_nlp/tests/unit/: conftest.py  test_chains_and_validation.py  test_downloader.py  test_pipeline_core.py  test_types.py
sec_nlp/tests/utils/: test_downloader.py  test_preprocessor.py
sec_nlp/utils/: downloader.py  preprocessor.py
src/edga_rs/: Cargo.toml  README.md
src/edga_rs/examples/: fetch_10k.rs  ticker_lookup.rs
src/edga_rs/src/: lib.rs  python.rs
src/edga_rs/src/client/: mod.rs  retry.rs
src/edga_rs/src/corp/: cik.rs  facts.rs  submissions.rs
src/edga_rs/src/filings/: metadata.rs
src/edga_rs/src/parse/: infer.rs  mod.rs
src/edga_rs/src/utils/: urls.rs
src/sec_nlp/: __init__.py  __main__.py  main.py  pipeline.py  types.py
src/sec_nlp/chains/: __init__.py  sec.py  sec_runnable.py
src/sec_nlp/cli/: __init__.py  __main__.py  ui.py
src/sec_nlp/core/: __init__.py  downloader.py  enums.py  logging.py  pipeline.py  preprocessor.py
src/sec_nlp/embed/: pinecone.py
src/sec_nlp/embeddings/: __init__.py  pinecone.py
src/sec_nlp/llms/: __init__.py  local_llm_base.py  local_t5_wrapper.py
src/sec_nlp/pipelines/: __init__.py  base.py  pipeline.py  registry.py  settings.py
src/sec_nlp/prompts/: sample_prompt_1.yml
src/sec_nlp/tests/: conftest.py  test_chains_and_validation.py  test_cli.py  test_conftest.py  test_llms_local_passthrough.py  test_pipeline_core.py  test_types.py
src/sec_nlp/utils/: __init__.py  downloader.py  preprocessor.py
src/tests/unit/: test_llms_local_passthrough.py
stubs/edgars/: edgars.pyi
stubs/sec_nlp/: __init__.pyi
stubs/sec_nlp/cli/: __init__.pyi  __main__.pyi
stubs/sec_nlp/core/: __init__.pyi  downloader.pyi  enums.pyi  pipeline.pyi  preprocessor.pyi  types.pyi
stubs/sec_nlp/tests/: conftest.pyi  test_chains_and_validation.pyi  test_downloader.pyi  test_enums.pyi  test_llms_local_passthrough.pyi  test_pipeline_core.pyi  test_preprocessor.pyi
tests/unit/: conftest.py  test_chains_and_validation.py  test_downloader.py  test_preprocessor.py
types/sec_nlp/cli/: __main__.pyi  ui.pyi
types/sec_nlp/core/: downloader.pyi  enums.pyi  logging.pyi  preprocessor.pyi
types/sec_nlp/pipelines/: base.pyi  registry.pyi  settings.pyi
types/sec_nlp/tests/: conftest.pyi  test_cli.pyi  test_downloader.pyi  test_llm_chains.pyi
typings/sec_nlp/cli/: __main__.pyi
typings/sec_nlp/core/: downloader.pyi  enums.pyi  pipeline.pyi  preprocessor.pyi
typings/sec_nlp/tests/: conftest.pyi  test_chains_and_validation.pyi  test_cli.pyi  test_llms_local_passthrough.pyi  test_pipeline_core.pyi
utils/: __init__.py
utils/fetch/: filings.py
utils/llms/: local_t5_wrapper.py
utils/parse/: preprocessor.py
(+91 files in other folders)
