# Cargo.toml (workspace root)
[workspace]
members = [
    "crates/sec_o3",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all crates
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
