[package]
name = "edga_rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast SEC/EDGAR utilities with Hyper client and optional Python bindings via PyO3"
readme = "README.md"
keywords = ["sec", "edgar", "xbrl", "filings", "python"]
authors = ["Nicolas Hill <your-email@example.com>"]
repository = "https://github.com/yourusername/sec-nlp"

[lib]
name = "edga_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text processing
regex = "1"
memchr = "2.7"

# Data structures
bytes = "1.6"
once_cell = "1.19"

# Logging
tracing = "0.1"

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"

# HTTP client (Hyper stack)
hyper = { version = "1", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6"
http-body-util = "0.1"

# HTML parsing
scraper = "0.20"

# Rate limiting
governor = "0.6"

# URL handling
url = "2.5"

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]
cache = []
full = ["python", "cache"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
