[package]
name = "sec_o3"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
http-body-util = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }

# Async compression
async-compression = { version = "0.4", features = ["tokio", "gzip", "zlib"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Parsing
regex = "1.10"
scraper = "0.24.0"

# Utilities
futures = "0.3.31"
tracing = "0.1.41"
dotenvy = "0.15.7"
once_cell = "1.21.3"
bytes = "1.10.1"

# Caching and hashing
moka = { version = "0.12.11", features = ["future"] }
rustc-hash = "2.1.1"
ahash = "0.8.12"

# Optional: sync compression fallback
flate2 = "1.1.4"
chrono = "0.4.42"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
optional = true

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
python = ["pyo3"]
