[package]
name = "sec_o3"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Async compression
async-compression = { version = "0.4", features = ["tokio", "gzip", "zlib"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities
futures = "0.3.31"
tracing = "0.1.41"
bytes = "1.10.1"
chrono = "0.4.42"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
optional = true

[dev-dependencies]

[features]
default = []
python = ["pyo3"]
