[package]
name = "edga_rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast SEC/EDGAR utilities with Hyper client and optional Python bindings via PyO3."
readme = "README.md"
keywords = ["sec", "edgar", "xbrl", "filings", "python"]

[lib]
name = "edga_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core
thiserror = "1.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"
once_cell = "1.19"
tracing = "0.1"

# HTTP (Hyper stack)
hyper = { version = "1", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
hyper-tls = "0.6"
http-body-util = "0.1"
scraper = "0.20"
memchr = "2.7"

# New dependencies
governor = "0.6"
futures = "0.3"
url = "2.5"

# Optional Python bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]
cache = []
full = ["python", "cache"]

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
